--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "3.3.0",
     "redux": "latest",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.3"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
