--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "formik": "^2.1.4",
     "history": "latest",
+    "lodash": "^4.17.15",
     "prop-types": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -15,7 +17,8 @@
     "react-scripts": "3.3.0",
     "redux": "latest",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "yup": "^0.28.1"
   },
   "scripts": {
     "start": "react-scripts start",
